# mb-sim

./: AGENTS.md  LAUNCHERS.md  Makefile  README.md  launch.py  launch_gui.bat  launch_gui.py  launch_gui.sh  pyproject.toml  requirements.txt
docs/: architecture.md  cli.md  development.md  gui_overview.md  requirements.md  roadmap.md  scenario_format.md  testing.md
docs/adr/: README.md
scenarios/: scenario_tcp_basic.yml
src/mb_sim/: __init__.py
src/mb_sim/cli/: __init__.py  __main__.py  main.py
src/mb_sim/gui/: __init__.py  __main__.py  app.py  main.py  main_window.py
src/mb_sim/models/: device.py  register_map.py
src/mb_sim/protocols/: __init__.py  modbus_server.py  transport_manager.py
src/mb_sim/scenario/: __init__.py  scenario_manager.py
src/mb_sim/simulator/: runtime.py
tests/gui/: test_app.py
tests/models/: test_device.py  test_register_map.py
